# Active_Noise_Control

./: .gitignore  requirements.sh  requirements.txt
AncModel/: AncModel.h  AncModelFrequencyResponse.cpp  AncModelSim.cpp  AncModelStepResponse.cpp  AncTFStepResponse.cpp  CMakeLists.txt  plot.sh
BlankController/: BlankController.h
Controller/: ControllerWithDynamics.h  MTController.h
ct-test/: CMakeLists.txt
ct-test/custom_controller/: custom_controller.cpp  custom_controller.h
ct-test/mass_point/: mass_point.cpp  mass_point.h
ct-test/oscillator/: damped_oscillator.cpp
experiments/: AncModelMTController.cpp  CMakeLists.txt
logger/: TrajectoryLogger.h  ct_log.h
src/: ControlOutputSystem.h  StateSpace.h  SystemWrapper.h  TransferFunc.h
test/: CMakeLists.txt  MTControllerTest.cpp  OscillatorTest.cpp  systemHubTest.cpp  tfTest.cpp
utils/: plot.py  utils.hpp
